--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,11 +25,20 @@ services:
     logging:
       driver: none
     environment:
-      VUE_APP_USER_MANAGER_API_URL: http://192.168.1.2:7070
+      VUE_APP_USER_MANAGER_API_URL: /proxy/api
     networks:
       - user-manager
+
+  proxy:
+    image: moreillon/api-proxy
+    environment:
+      PROXY_API: http://user-manager-back
+      PROXY_ROOT: http://user-manager-front
     ports:
-      - "8080:80"
+      - "8081:80"
+    networks:
+      - user-manager
+
 
 #volumes:
 #  mongo-data:
